--- a/app/package.json
+++ b/app/package.json
@@ -9,19 +9,23 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@observablehq/plot": "^0.6.16",
     "@uidotdev/usehooks": "^2.4.1",
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-sortablejs": "^6.1.4",
     "react-use": "^17.6.0",
+    "sortablejs": "^1.15.6",
     "styled-components": "^6.1.14",
     "swr": "^2.3.0",
-    "tabler-react-2": "0.1.61"
+    "tabler-react-2": "0.1.69"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
