--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
+    "react-font-loader": "^2.0.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
@@ -25,7 +26,7 @@
     "sortablejs": "^1.15.6",
     "styled-components": "^6.1.14",
     "swr": "^2.3.0",
-    "tabler-react-2": "0.1.69"
+    "tabler-react-2": "0.1.76"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
